* added new config option called wget_deep and incremented config to 7.2 - this will allow 1 deep download wgets
* added ability to select on deeper wgets through web cloner in the web attack vectors - this will allow you to clone the site and not just the index.html which might be better.. to enable this edit /etc/setoolkit/set.config and turn WGET_DEEP to on.

~~~~~~~~~~~~~~~~
version 7.1.2
~~~~~~~~~~~~~~~~

* fixed an issue on pdf generation payloads when metasploit had never been run before on a system - now forces directory creation

~~~~~~~~~~~~~~~~
version 7.1.1
~~~~~~~~~~~~~~~~

* fixes an issue when generating PDF exes that would cause an outfile error

~~~~~~~~~~~~~~~~
version 7.1
~~~~~~~~~~~~~~~~

* added so you can use multiple IP addreses based on space on mssql bruter
* rewrote mssql bruter to incorporate pymssql
* rewrote delivery payload method to use certuil instead of windows debug method
* added better description around handling tabnabbing
* added better ability to handle powershell injection
* rewrote and moved off impacket to pymssql
* added import own binary for mssql deployment
* changed deployment method from old base64 conversion bypass to Matthew Graeber's certutil binary method
* added option to import new file or metasploit file for meterpreter bypass method
* added better handling around binary injection technique for binary dropper method 
* added better threading within brute forcing sql accounts
* fixed an issue where SET directory would not properly fill in dll hijacking and give invalid /root/.setsrc path instead of .set/src 
* reduced file format generation counter to when it prompts error message
* fixed an issue in mssql bruter that would remove the port parameter when attempting to brute force
* added if udp 1434 is not found, it will fall back to nmap to discover if 1433 default port is open - ran into pentest where udp wasn't allowed and missed SQL servers because of this